minikube/networkpolicy/np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-from-ns2
  namespace: ns1
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress: []
