minikube/networkpolicy/restrict-database-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-database-egress
spec:
  podSelector:
    matchLabels:
      role: database
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              role: backup
      ports:
        - protocol: TCP
          port: 3306
